alignment fixes

--- a/src/Components/Utilities/Navigation/Navigation.scss
+++ b/src/Components/Utilities/Navigation/Navigation.scss
@@ -30,6 +30,9 @@ body {
     width: 40px;
     height: 40px;
   }
+  img:hover{
+    filter: brightness(50%);
+  }
 }
 
 footer {
